--- a/GA_forNsiteMolecule.ipynb
+++ b/GA_forNsiteMolecule.ipynb
@@ -98,7 +98,7 @@
    "id": "23ee765f",
    "metadata": {},
    "source": [
-    "<font size=3>A função `energiaMin` recebe a quantidade de átomos que estarão presentes na molécula. A partir desses dados ela calcula a quantidade de possíveis arranjos entre esse átomos e gera todas as possíveis matrizes, que são `binárias`. Com as matrizes geradas na função acima, a função `testaMatriz` recebe as matrizes e calcula a energia total (`t_total`) de cada matriz e rotorna a `melhor matriz`, junto a seus `autovalores (em ordem crescente)` e a `menor energia encontrada`.</font>"
+    "<font size=3>A função `energiaMin` recebe a quantidade de átomos que estarão presentes na molécula. A partir desses dados ela calcula a quantidade de possíveis arranjos entre esse átomos e gera todas as possíveis matrizes, que são `binárias`. Com as matrizes geradas na função acima, a função `testaMatriz` recebe as matrizes e calcula a energia total (`t_total`) de cada matriz e retorna a `melhor matriz`, junto a seus `autovalores (em ordem crescente)` e a `menor energia encontrada`.</font>"
    ]
   },
   {
