--- a/GA_forNsiteMolecule.ipynb
+++ b/GA_forNsiteMolecule.ipynb
@@ -159,7 +159,7 @@
     "<font size=3>- Seleção: Seleção por torneio com 3 indivíduos.</font>\n",
     "\n",
     "\n",
-    "<font size=3>- Cruzamento: Cruzamento de ponto simples adaptado a matrizes altera apenas a parte superior da matriz visto que ela é uma matriz triangular superior.</font>\n",
+    "<font size=3>- Cruzamento: Cruzamento de ponto simples adaptado a matrizes. Altera apenas a parte superior da matriz visto que ela é uma matriz triangular superior.</font>\n",
     "\n",
     "\n",
     "<font size=3>- Mutação: Mutação simples e binária, porém com a restrição de somente ocorrer fora e acima da diagonal principal.</font>\n",
